@@ -22,6 +22,6 @@ DIST ncurses-5.7.tar.gz 2445052 RMD160 a19ca026d32255f5a4d22eb006d65182041e0234 
 EBUILD ncurses-5.6-r2.ebuild 6906 RMD160 33d08f2df75f520afb2338758aa9828cb68ca5d1 SHA1 3a1109302f2c89d70fdfca2ab1c43caaeda2f322 SHA256 8585640aef74f32d42aafcaca0ef72a32d1598bc634ff137539528e6ab9b59ef
 EBUILD ncurses-5.7-r1.ebuild 7014 RMD160 a354f3068370d2f5c18b5ead34b3bd20eaeabdae SHA1 b4f47745ed8b33e892852e72fbdc69a90ce58aa1 SHA256 c7ee38f9c41820f619cbb578dfd71cb3c77c9400a23fa47077f0276b02c1393c
 EBUILD ncurses-5.7-r2.ebuild 7659 RMD160 5b9107186cb41ea539fca40d2b8f53452c67dc20 SHA1 55e86fd96c35413024c9e8badc810f33ead06ad2 SHA256 f138dfcaa874b4c8222af8fcdecb5a35b4317772c1e65efb6cf1b9c06b2a8713
-EBUILD ncurses-5.7-r3.ebuild 7813 RMD160 3d6c7c4326ddc2d42508c4f419861f3452616a79 SHA1 360ba66988fb441065e3ee8c45ec3db2b9fef8bb SHA256 ae8df4077368db69f85253057e2661bb95ae2dca126d2756e40075d18ab6b3e7
-MISC ChangeLog 25360 RMD160 39d944e9187c646c326b15f343b73ec578d4ee7d SHA1 8f1041960c722e289f8696bcdc70331eec1e3845 SHA256 5c70d6c8d03329e2847eaf880feeab640474fed4e7115afba83df0bcc7ff11c6
+EBUILD ncurses-5.7-r3.ebuild 7882 RMD160 c4f4b873bc9157b005368361d9687ffae6b635dc SHA1 a99198b075a16479c1af5c0233b458557d3bca6f SHA256 0dd4f4cfd7af578a821148d5091e56159f81d835783541097f16b9f85824353f
+MISC ChangeLog 25492 RMD160 41873a28da41f56abcd8b53608b03d3c223d04b3 SHA1 421f456c3aae4e58902347713237bdc77b57bb34 SHA256 0345863d9ced3969a5a9021d95c60e9ca25d09dec940ba692b9dfd8cd69d16f2
 MISC metadata.xml 320 RMD160 cd60b146f09101932293157c33ac98f273c92783 SHA1 47c720e1ec7ce4a1c4de36edeac9cfd10004bbae SHA256 906f778ea6ad65cad63404d3bd4126d32dcaef8fa0dd81d0108fd20630594779
