@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/ncurses-5.7-r3.ebuild,v 1.9 2010/02/03 04:40:07 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ncurses/ncurses-5.7-r3.ebuild,v 1.10 2010/03/06 23:12:41 vapier Exp $
 
 EAPI="1"
 inherit eutils flag-o-matic toolchain-funcs multilib
@@ -35,6 +35,7 @@ src_unpack() {
 	epatch "${FILESDIR}"/${PN}-5.7-tic-cross-detection.patch #288881
 	epatch "${FILESDIR}"/${PN}-5.7-rxvt-unicode.patch #192083
 	epatch "${FILESDIR}"/${P}-hashdb-open.patch #245370
+	sed -i '/with_no_leaks=yes/s:=.*:=$enableval:' configure #305889
 
 	epatch "${FILESDIR}"/${PN}-5.7-mint.patch
 	epatch "${FILESDIR}"/${PN}-5.5-aix-shared.patch
@@ -128,7 +129,7 @@ do_compile() {
 		--enable-echo \
 		$(use_enable !ada warnings) \
 		$(use_with debug assertions) \
-		$(use_with !debug leaks) \
+		$(use_enable !debug leaks) \
 		$(use_with debug expanded) \
 		$(use_with !debug macros) \
 		$(use_with trace) \
